# demo_rgbd_slimmed

./: CMakeLists.txt  package.xml
launch/: demo_rgbd_slimmed.launch
src/: cameraParameters.h  featureTracking.cpp
